# XtrRiscv

./: .gitignore  LICENSE.md  README.md
docs/: bus_waveform.json  bus_wavefrom.json  xtr_riscv_pipeline.drawio
rtl/cpu/: alu.vhd  alu_pkg.vhd  branch_unit.vhd  comparator.vhd  control_unit.vhd  cpu.vhd  cpu_checker.vhd  csr.vhd  csr_def.vhd  execute.vhd  instruction_decode.vhd  instruction_fetch.vhd  interrupt_handler.vhd  lsu.vhd  memory.vhd  prefetch.vhd  regfile.vhd  rv32i_pkg.vhd  shifter.vhd  writeback.vhd  xtr_cpu.vhd
rtl/cpu/c_extension/: decompressor.vhd
rtl/cpu/debug/: debug_extension.vhd  debug_module.vhd  debug_module_pkg.vhd
rtl/cpu/debug/jtag_dtm/: dtm_pkg.vhd  jtag_dtm.vhd
rtl/cpu/m_extension/: div.vhd  mul.vhd  muldiv.vhd
rtl/cpu/utils/: cpu_fifo.vhd
rtl/proj/cocotb/: Makefile  main.py
rtl/proj/modelsim/: Makefile  README.md
rtl/proj/modelsim_proj/: xtrriscv_sim.mpf
rtl/proj/radiant/crosslink-nx/constraints/: constraints.pdc
rtl/proj/radiant/crosslink-nx/proj/: crosslinknx.rdf
rtl/proj/radiant/crosslink-nx/src/: top.vhd
rtl/proj/xilinx/arty_s7-50/constraints/: arty.xdc
rtl/proj/xilinx/arty_s7-50/proj/: xtrriscv.xpr
rtl/proj/xilinx/arty_s7-50/src/: top.vhd
rtl/soc/: xtr_peripherials.vhd  xtr_soc.vhd
rtl/soc/boottrap/: boot_trap.vhd  xtr_boot_trap.vhd
rtl/soc/ram/: bram.vhd  xtr_ram.vhd
rtl/soc/ram/ghdl/: bram.vhd
rtl/soc/timer/: xtr_mtime.vhd
rtl/soc/uart/: uart_rx.vhd  uart_tx.vhd  xtr_uart.vhd
rtl/testbenches/: tb_cpu.vhd  tb_if_id.vhd  tb_if_id_ex.vhd  tb_if_id_ex_mem.vhd  tb_if_id_ex_mem_wb.vhd  tb_instruction_fetch.vhd  tb_xtr_soc.vhd
rtl/testbenches/fli/: CMakeLists.txt
rtl/testbenches/fli/src/: jtag.cpp
rtl/testbenches/fli/src/tcp_server/: TcpServer.cpp  TcpServer.hpp
rtl/testbenches/src/: sim_file.vhd  sim_jtag.vhd  sim_soc.vhd  sim_stdout.vhd
rtl/utils/: data_handshake.vhd  utils.vhd  vhdl_utils.vhd  xtr_abr.vhd  xtr_def.vhd  xtr_split.vhd
soft/: CMakeLists.txt
soft/cmake_tools/: linker_script.ld  targets.cmake  toolchain.cmake
soft/src/: io.h  isr.S  main.S  main.c
soft/src/riscv/: csr.h
